-
Bug
-
Resolution: Done
-
P2: Important
-
5.9.1, 5.11.0 Beta 2
-
Windows 10
Qt 5.9.1
-
8201524ababcf5cb6e14657e23004d45e4dff548 958e412a25523cc031564faae81c569aa6c3b01f
I am getting this error when closing my app.
ASSERT: "m_engines.contains(engine)" in file qqmlenginedebugservice.cpp, line 803 global\qglobal.cpp: 3049
There's no logging to tell me what the problem is...
This snippet of QML reproduces the problem:
import QtQuick 2.9 import QtQuick.Window 2.2 Window { visible: true width: 640 height: 480 title: qsTr("Hello World") property Component x: Qt.createComponent("x.qml") Component.onDestruction: console.log(x.createObject(this, {})); }
Just start it in the debugger and close the window.
For Gerrit Dashboard: QTBUG-62458 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
223703,2 | QML debugger: Don't crash when creating objects on engine destruction | 5.11 | qt/qtdeclarative | Status: MERGED | +2 | 0 |
223731,2 | QML debugger: Don't crash when creating objects on engine destruction | 5.9 | qt/qtdeclarative | Status: MERGED | +2 | 0 |