QML debugger: Don't crash when creating objects on engine destruction

You can create further objects while the QML engine is being destroyed.
The debug service is not interested in those because they will be rather
short lived anyway.

Task-number: QTBUG-62458
Reviewed-by: Simon Hausmann <simon.hausmann@qt.io>
Change-Id: I255e18590d434e0487efac7c82c223752c645f25
(cherry-picked from commit 958e412a25523cc031564faae81c569aa6c3b01f)